--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Web.config
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-KonsorcjumLekarzy-20170323090922.mdf;Initial Catalog=aspnet-KonsorcjumLekarzy-20170323090922;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-KonsorcjumLekarzy-20170323090922.mdf;Initial Catalog=aspnet-KonsorcjumLekarzy-20170323090922;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" 
+         connectionString="Server=tcp:inzynieriainternetowa.database.windows.net,1433;Initial Catalog=inzynieriainternetowa;Persist Security Info=False;User ID=inzynieria;Password=Konsorcjum_93;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,7 +27,8 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm" />
+    <!--<customErrors mode="Off" defaultRedirect="mycustompage.htm" />-->
+    <customErrors mode="Off"></customErrors>
     <roleManager enabled="true" />
   </system.web>
   <system.webServer>
