Added visit description.

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy.Database/KonsorcjumLekarzy.Database.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy.Database/KonsorcjumLekarzy.Database.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Model\IdentityModels.cs" />
     <Compile Include="Model\ModelCustomContext.cs" />
     <Compile Include="Model\Patient.cs" />
+    <Compile Include="Model\Prescription.cs" />
     <Compile Include="Model\Specialization.cs" />
     <Compile Include="Model\Visit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
