--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/KonsorcjumLekarzy.csproj
@@ -642,6 +642,8 @@
     <Content Include="Areas\Administration\Views\Prescription\Create.cshtml" />
     <Content Include="Areas\Administration\Views\Prescription\Edit.cshtml" />
     <Content Include="Areas\Administration\Views\Prescription\Delete.cshtml" />
+    <Content Include="ClassDiagram2.cd" />
+    <Content Include="ClassDiagram3.cd" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
